<package format="3">
  <name>calibration_estimation</name>
  <version>0.10.14</version>
  <description>
    Runs an optimization to estimate the a robot's kinematic parameters. This package is a
    generic rewrite of pr2_calibration_estimation.
  </description>
  <author>Vijay Pradeep</author>
  <author>Michael Ferguson</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calibration_estimation</url>
  
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <exec_depend>calibration_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>

  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exce_depend>rospy</exce_depend>
  <exce_depend>rostest</exce_depend>
  <exce_depend>sensor_msgs</exce_depend>
  <exce_depend>urdfdom_py</exce_depend>
  <exce_depend>visualization_msgs</exce_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
