<package format="3">
  <name>calibration_estimation</name>
  <version>0.10.15</version>
  <description>
    Runs an optimization to estimate the a robot's kinematic parameters. This package is a
    generic rewrite of pr2_calibration_estimation.
  </description>
  <author>Vijay Pradeep</author>
  <author>Michael Ferguson</author>
<maintainer email="david.feilseifer@gmail.com">David Feil-Seifer</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calibration_estimation</url>
  
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <build_depend>calibration_msgs</build_depend>

  <exec_depend>calibration_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python_orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pykdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
