<package>
  <name>calibration_launch</name>
  <version>0.9.29</version>
  <description>
    This package contains a collection of launch files that can be helpful in configuring
    the calibration stack to run on your robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/calibration_launch</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
