<package>
  <name>calibration_launch</name>
  <version>0.10.13</version>
  <description>
    This package contains a collection of launch files that can be helpful in configuring
    the calibration stack to run on your robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/calibration_launch</url>

  <run_depend>interval_intersection</run_depend>
  <run_depend>joint_states_settler</run_depend>
  <run_depend>laser_cb_detector</run_depend>
  <run_depend>monocam_settler</run_depend>
  <run_depend>urdfdom_py</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
