<package>
  <name>laser_cb_detector</name>
  <version>0.9.17</version>
  <description>
     Extracts checkerboard corners from a dense laser snapshot.
     This package is experimental and unstable. Expect its APIs to change.
  </description>
  <author>Vijay Pradeep</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/laser_cb_detector</url>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_cb_detector</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>settlerlib</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_cb_detector</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>settlerlib</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
