<package>
  <name>monocam_settler</name>
  <version>0.9.18</version>
  <description>
     Listens on a ImageFeatures topic, and waits for the data to settle.
     This package is experimental and unstable.
     Expect its APIs to change.
  </description>
  <author>Vijay Pradeep</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/monocam_settler</url>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>settlerlib</build_depend>
  <build_depend>std_msgs</build_depend> 

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>settlerlib</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
